--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,13 +58,17 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.10f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\MainMenu\MenuController.cs" />
     <Compile Include="Assets\Scripts\ClawGame\ClawController.cs" />
     <Compile Include="Assets\Scripts\ParticleSim\Circle.cs" />
     <Compile Include="Assets\Scripts\ParticleSim\ThingDrawer.cs" />
+    <Compile Include="Assets\Scripts\ClawGame\PrizeClearer.cs" />
     <Compile Include="Assets\Scripts\ClawGame\CapsuleSpawner.cs" />
     <Compile Include="Assets\Scripts\ClawGame\PrizeDetector.cs" />
+    <Compile Include="Assets\Scripts\MainMenu\MenuButton.cs" />
     <Compile Include="Assets\Scripts\Defs.cs" />
     <Compile Include="Assets\Scripts\ClawGame\PrizeDisplayer.cs" />
+    <Compile Include="Assets\Scripts\ClawGame\WinBGAnimation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
